--- a/project/package.json
+++ b/project/package.json
@@ -20,9 +20,14 @@
     "react-redux": "~4.4.5"
   },
   "devDependencies": {
-    "webpack-bundle-tracker": "0.0.93",
+    "babel-plugin-transform-object-rest-spread": "~6.8.0",
     "babel-preset-stage-0": "~6.5.0",
     "babel-preset-stage-2": "~6.11.0",
-    "babel-plugin-transform-object-rest-spread": "~6.8.0"
+    "eslint": "^3.1.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.11.1",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^5.2.2",
+    "webpack-bundle-tracker": "0.0.93"
   }
 }
